# Gist

./: .gitignore  CMakeLists.txt  README.md  USAGE IN C++.md  USAGE IN PYTHON.md
.github/workflows/: main.yml
documentation/: gist.Doxyfile  mainpage.dox
documentation/html/: _accelerate_f_f_t_8cpp.html  _accelerate_f_f_t_8h.html  _accelerate_f_f_t_8h_source.html  _core_frequency_domain_features_8cpp.html  _core_frequency_domain_features_8h.html  _core_frequency_domain_features_8h_source.html  _core_time_domain_features_8cpp.html  _core_time_domain_features_8h.html  _core_time_domain_features_8h_source.html  _gist_8cpp.html  _gist_8h.html  _gist_8h_source.html  _m_f_c_c_8cpp.html  _m_f_c_c_8h.html  _m_f_c_c_8h_source.html  _onset_detection_function_8cpp.html  _onset_detection_function_8h.html  _onset_detection_function_8h_source.html  _window_functions_8cpp.html  _window_functions_8h.html  _window_functions_8h_source.html  (+37 more)
python-module/: GistPythonModule.cpp  Gist_PythonModule.cpp  INSTALL.md  example.py  gist_python_module.cpp  setup.py  test.py
src/: CMakeLists.txt  Gist.cpp  Gist.h  gist.h
src-Windows/: Gist.autopkg  Gist.sln  Gist.vcxproj  Gist.vcxproj.filters
src/core/: CoreFrequencyDomainFeatures.cpp  CoreFrequencyDomainFeatures.h  CoreTimeDomainFeatures.cpp  CoreTimeDomainFeatures.h
src/fft/: AccelerateFFT.cpp  AccelerateFFT.h  WindowFunctions.cpp  WindowFunctions.h
src/mfcc/: MFCC.cpp  MFCC.h
src/onset-detection-functions/: OnsetDetectionFunction.cpp  OnsetDetectionFunction.h
src/pitch/: PitchDetection.cpp  PitchDetection.h  Yin.cpp  Yin.h
(+105 files in other folders)
